SLING-11590 Make compatible with m2e 2.x (#14)
Require at least Eclipse 2022-09
Update Eclipse plugins to Java 17
Update to Tycho 3.0.0
No longer generate p2 repo for plain OSGi bundles
Update to latest dependencies/parent poms
Require Java 11 for Shared and CLI
Rely on DS component description generation with tycho-ds-plugin
Remove dependency on OSGi EventHandler